--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-numpy==1.23.1
-scikit-image==0.19.3
-torch==1.12.0
-matplotlib==3.5.2
+-i https://pypi.tuna.tsinghua.edu.cn/simple
+numpy==2.2.5
+scikit-image==0.25.2
+matplotlib==3.10.1
+numexpr
+# torch==1.12.0
+# https://pytorch.org/
+# pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu128
